# ddt-local-extractor

./: .env.example  .gitignore  README.md  pyproject.toml  roadmap.md
.github/workflows/: build-desktop.yml  cross-platform.yml  deploy-pages.yml
dataset/: README_test_set.md  ground_truth_ddt.json  ground_truth_righe.csv
examples/config/: benchmark.yaml  benchmark_smoke.yaml
examples/ground_truth/: 01_DDT_Acciai_Nordest.json  02_DDT_Lamiera_Prisma.json  03_DDT_Sidera_Coil.json  04_DDT_Piana_Inox.json  05_DDT_Metalli_Quota.json  06_DDT_Bobine_Tirreno.json  07_DDT_Acciaio_Vettore.json  08_DDT_Inox_Labirinto_scansione.json  09_DDT_Lamiere_Aurora.json  10_DDT_Centro_Siderurgico_Orione_scansione.json
packaging/: DDT-Local-Extractor.iss  LEGGIMI.txt  start.bat  start.command  start.sh  stop.bat  stop.command
scripts/: build_macos.sh  build_windows.ps1  generate_ground_truth_examples.py  install_launchd.sh  install_task_scheduler.ps1  pull_models.sh  run_macos.sh  run_windows.cmd
site/: index.html
src/ddt_local/: __init__.py  (+21 more)
tests/: conftest.py  test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_scoring.py  test_cli.py  test_config.py  test_database.py  test_desktop_gui.py  test_desktop_runner.py  test_desktop_services.py  test_excel.py  test_files.py  test_ground_truth.py  test_integration_ollama.py  test_logging.py  test_models.py  test_ocr.py  test_ollama.py  test_pdf.py  test_pipelines.py  test_pipelines_factory.py  test_production.py  test_quality.py  test_scanner.py  test_scheduler.py  test_scripts.py  test_user_config.py  test_validation.py
(+10 files in other folders)
