[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddt-local-extractor"
version = "1.0.0"
description = "Local DDT extraction pipeline with Ollama benchmark"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "filelock>=3.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ddt-local = "ddt_local.cli:main"
ddt-local-gui = "ddt_local.desktop_gui:main"
ddt-local-runner = "ddt_local.desktop_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ddt_local"]

[tool.hatch.build.targets.wheel.sources]
"src/ddt_local" = "ddt_local"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ollama: integration tests requiring local Ollama models",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
